se completo el paquete service.club y otras modificaciones en los repository